Bug 462925 - TIFF: Inconsistent enabling of Save transparency channel and Photoshop boxes
Summary: TIFF: Inconsistent enabling of Save transparency channel and Photoshop boxes
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: File formats (other bugs)
Version First Reported In: 5.1.3
Platform: Compiled Sources Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: amyspark
URL:
Keywords:
Depends on:
Blocks: 461975
  Show dependency treegraph
 
Reported: 2022-12-11 18:36 UTC by amyspark
Modified: 2022-12-12 15:27 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description amyspark 2022-12-11 18:36:27 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***

Issues found in the TIFF export dialog as part of bug 461975:

- The existing logic disables alpha exporting for CMYK while LibTiff can perfectly handle it. The only banned color space is YCbCr, which is already safe asserted + worked around in the exporter itself.
- The "Flatten" checkbox improperly disables/enables the Alpha checkbox for reasons unknown.
- The LibTiff configure check for PSD export is overridden by the Flatten checkbox state.

STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 10 21H2
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Commit 938ccf75c3894052c2ef9f54dc17254a2f1db0cb
Comment 1 Bug Janitor Service 2022-12-11 18:53:23 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1671
Comment 2 amyspark 2022-12-12 15:25:26 UTC
Git commit 7406cea00128c90feabc154daf890b8652b1ef9a by L. E. Segovia.
Committed on 12/12/2022 at 15:23.
Pushed by lsegovia into branch 'master'.

TIFF: fix inconsistent state of alpha and Photoshop export checkboxes

Enable alpha exporting for CMYK as it's perfectly compatible

M  +3    -2    plugins/impex/tiff/kis_dlg_options_tiff.cpp

https://invent.kde.org/graphics/krita/commit/7406cea00128c90feabc154daf890b8652b1ef9a
Comment 3 amyspark 2022-12-12 15:27:49 UTC
Git commit 4a34cf9693b8e2c96e5cd9bd285ccd4bb7131681 by L. E. Segovia.
Committed on 12/12/2022 at 15:27.
Pushed by lsegovia into branch 'krita/5.1'.

TIFF: fix inconsistent state of alpha and Photoshop export checkboxes

Enable alpha exporting for CMYK as it's perfectly compatible
(cherry picked from commit 7406cea00128c90feabc154daf890b8652b1ef9a)

M  +3    -2    plugins/impex/tiff/kis_dlg_options_tiff.cpp

https://invent.kde.org/graphics/krita/commit/4a34cf9693b8e2c96e5cd9bd285ccd4bb7131681