TIFF: fix inconsistent state of alpha and Photoshop export checkboxes

Enable alpha exporting for CMYK as it's perfectly compatible

BUG: 462925